--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "vue": "^3.3.4",
     "vue-resource": "^1.5.3",
     "vue-router": "^4.2.5"
